* class AddressGroup | method includedInIP4Network return 0 instead of 1 if Addressgroup has no members
* class RuleStore | method resultingPostRuleSet() - for Panorama shared now postRule is only return once instead of duplicate
* pa_service-edit | bug fix for actions=timeout-set:SECONDS - <override><no/></override> was not removed | skip if servicegroup

GENERAL:
* introduce class AppCustom/AppFilter/AppGroup - to split object relevant information from class App
* introduce class SaasSecurityProfile - extending all Fawkes config class and UTIL to support this new SecurityProfile
* introduce class class Threat / ThreatStore / ThreatVulnerability / ThreatSpyware


2.0.8 (20210719)
UTILS:

BUGFIX:
* framework related to appStore - introduce appStore on all lower level/DG hierarchy

GENERAL:
* SecurityProfile classes rename from XYZStore to XYZ
* class App - introduce methods isApplicationCustom() / isApplicationFilter() / isApplicationGroup()


2.0.7 (20210717)
UTILS:
* pa_securityprofilegroup-edit | new actions=securityProfile-Set and securityProfile-Remove - new filters: * secprof: as-profile.is, as-profile.is.set, av-profile.is, av-profile.is.set, data-profile.is, data-profile.is.set, file-profile.is, file-profile.is.set, url-profile.is, url-profile.is.set, vuln-profile.is, vuln-profile.is.set, wf-profile.is, wf-profile.is.set
* introduce new script pa_application-edit; with different filters
* pa_device-edit | extend with devicetype=manageddevice
* pa_securityprofilegroup-edit | introduce actions=exporttoexcel:FILE.HTML
* pa_schedule-edit - class Schedule | introduce method setNonRecurring
* pa_schedule-edit - class Schedule | introduce methode setRecurringDaily and setRecurringWeekly
* pa_device-edit | introduce actions=displayreferences
* pa_securityprofile-edit - added support for data-filtering

BUGFIX:
* class Schedule/ScheduleStore - bugfix to create new schedule objects

GENERAL: