@@ -11,6 +11,7 @@ BUGFIX:
 * class AddressGroup | method includedInIP4Network return 0 instead of 1 if Addressgroup has no members
 * class RuleStore | method resultingPostRuleSet() - for Panorama shared now postRule is only return once instead of duplicate
 * pa_service-edit | bug fix for actions=timeout-set:SECONDS - <override><no/></override> was not removed | skip if servicegroup
+* pa_XYZ-merger | bug fix to merg with childDG ONLY if argument allowmergingwithupperlevel is set
 
 GENERAL:
 * introduce class AppCustom/AppFilter/AppGroup - to split object relevant information from class App
